test/MC/SVE/regression-tests/negative_tests/sve-prfb-012.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU8Prefetch1LSS
// Offset register Rm cannot be xzr
prfb pstl1strm, p1, [x5, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
